# nomad

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  flake.nix  rust-toolchain.toml
benches/: Cargo.toml  build.rs
benches/src/: main.rs
benches/src/collab/: start.rs
crates/auth/: Cargo.toml
crates/auth-types/: Cargo.toml
crates/auth-types/src/: audience.rs  claims.rs  json_web_token.rs  lib.rs
crates/auth-types/tests/: auth_server_jwt_signing_private_key.pem  auth_server_jwt_signing_public_key.pem
crates/auth/src/: auth.rs  auth_infos.rs  github.rs  lib.rs  login.rs  logout.rs
crates/auth/src/actions/: login.rs  logout.rs  mod.rs
crates/auth/src/backend/: mock.rs  mod.rs  neovim.rs
crates/auth/src/editors/: mock.rs  mod.rs  neovim.rs
crates/collab/: Cargo.toml
crates/collab-project/: Cargo.toml
crates/collab-project/src/: lib.rs  project.rs  project_builder.rs  text.rs
crates/collab-project/src/fs/: directory.rs  file.rs  node.rs  op.rs  sync.rs
crates/collab/src/: collab.rs  collab_editor.rs  config.rs  convert.rs  copy_id.rs  event.rs  event_stream.rs  join.rs  joiner.rs  jump.rs  leave.rs  lib.rs  list_ext.rs  neovim_collab.rs  peers.rs  progress.rs  project.rs  resume.rs  root_markers.rs  seq_ext.rs  session.rs  session_error.rs  session_id.rs  start.rs  tcp_stream_ext.rs  text_backlog.rs  utils.rs  yank.rs
crates/collab/src/actions/: join.rs  start.rs  yank.rs
crates/collab/src/backend/: mock.rs  mod.rs  neovim.rs
crates/collab/tests/: join.rs  start.rs
crates/collab2/: Cargo.toml
crates/collab2/src/: collab.rs  collab_backend.rs  collab_editor.rs  join.rs  leave.rs  lib.rs  neovim_collab.rs  project.rs  root_markers.rs  session.rs  session_id.rs  session_status.rs  sessions.rs  start.rs  yank.rs
crates/collab2/tests/: mock.rs  neovim.rs  start.rs
crates/colorschemes/: Cargo.toml  build.rs
crates/colorschemes/src/: colorscheme.rs  colorschemes.rs  config.rs  highlight_group.rs  lib.rs  loadable_colorscheme.rs
crates/common/: Cargo.toml
crates/common/src/: api_builder.rs  command_builder.rs  ctx.rs  lateinit.rs  lib.rs  plugin.rs  runtime.rs  sender.rs  window_config.rs
crates/ed/: Cargo.toml
crates/ed/src/: agent_id.rs  api.rs  async_ctx.rs  backend.rs  base_backend.rs  buffer.rs  byte_offset.rs  context.rs  cursor.rs  editor.rs  editor_ctx.rs  executor.rs  lib.rs  selection.rs  shared.rs  state.rs  util.rs  value.rs
crates/ed/src/fs/: file.rs  (+9 more)
crates/editor/: Cargo.toml
crates/editor/src/: access.rs  buffer.rs  context.rs  cursor.rs  editor.rs  editor_adapter.rs  lib.rs  selection.rs  shared.rs
crates/executor/: Cargo.toml
crates/executor/src/: background_spawner.rs  executor.rs
crates/fs/: Cargo.toml
crates/fs-filters/: Cargo.toml
crates/fs-filters/src/: gitignore.rs  lib.rs
crates/fs/src/: directory.rs  file.rs  filter.rs  fs.rs  fs_node.rs  lib.rs  metadata.rs  os.rs  symlink.rs  walk.rs
crates/gitignore/: Cargo.toml
crates/gitignore/src/: command_error.rs  create_error.rs  gitignore.rs  ignore_error.rs  lib.rs
crates/http-client/: Cargo.toml
crates/http-client/src/: http_client.rs  lib.rs  reqwest.rs
crates/mad/: Cargo.toml
crates/mad-nvim/: Cargo.toml
crates/mad-nvim/src/: lib.rs
crates/mad/src/: config.rs  lib.rs  mad.rs  runtime.rs
crates/mock/: Cargo.toml
crates/mock/macros/: Cargo.toml
crates/mock/src/: api.rs  backend_ext.rs  buffer.rs  config.rs  context_ext.rs  emitter.rs  executor.rs  fs.rs  lib.rs  mock.rs  serde.rs  value.rs
crates/neovim/: Cargo.toml
crates/neovim/macros/: Cargo.toml
crates/neovim/src/: api.rs  background_executor.rs  buffer.rs  buffer_ext.rs  convert.rs  ctx.rs  cursor.rs  decoration_provider.rs  events.rs  executor.rs  get.rs  lib.rs  local_executor.rs  mode.rs  neovim.rs  notify.rs  option.rs  selection.rs  serde.rs  tests.rs  tracing_layer.rs  utils.rs  value.rs
crates/nomad/: Cargo.toml
crates/nomad-collab-params/: Cargo.toml
crates/nomad-collab-params/src/: auth_error.rs  github_authenticator.rs  lib.rs  nomad_params.rs
crates/nomad-neovim/: Cargo.toml
crates/nomad-neovim/lua/: command.lua
crates/nomad-neovim/src/: file_appender.rs  lib.rs  nomad.rs
crates/nomad/src/: action.rs  action_name.rs  actor_id.rs  actor_map.rs  api.rs  autocmd.rs  autocmd_id.rs  boo.rs  buf_attach.rs  buffer.rs  buffer_id.rs  buffer_snapshot.rs  byte_offset.rs  cola_replacement.rs  command.rs  command_args.rs  config.rs  context.rs  crdt_replacement.rs  decoration_provider.rs  diagnostics.rs  edit.rs  editor.rs  editor_id.rs  event.rs  executor.rs  function.rs  join_handle.rs  lib.rs  maybe_future.rs  maybe_result.rs  module.rs  module_api.rs  module_commands.rs  module_name.rs  nomad.rs  nomad_command.rs  nvim_buffer.rs  object_safe_module.rs  point.rs  (+9 more)
crates/nomad/tests/: Cargo.toml
crates/nomad2/: Cargo.toml
crates/nomad2/macros/: Cargo.toml
crates/nomad2/src/: buffer.rs  byte_offset.rs  context.rs  edit.rs  editor.rs  emitter.rs  event.rs  lib.rs  module.rs  subscription.rs  text.rs
crates/nvim-mad/: Cargo.toml
crates/nvim-mad/src/: config.rs  lib.rs  mad.rs  runtime.rs
crates/tempdir/: Cargo.toml
crates/tempdir/src/: fs_ext.rs  tempdir.rs
crates/thread-pool/: Cargo.toml
crates/thread-pool/src/: thread_pool.rs
neovim/: Cargo.toml
tests/: Cargo.toml  build.rs
tests/src/: lib.rs
tests/src/collab/: cursors.rs  event_stream.rs  join.rs  mod.rs  neovim.rs  start.rs  text_edits.rs
tests/src/collab_project/: mod.rs  text.rs
tests/src/ed/: buffer.rs  cursor.rs  selection.rs  test_editor.rs
tests/src/editor/: buffer.rs  cursor.rs  mod.rs  selection.rs  test_editor.rs
tests/src/fs/: walk.rs
tests/src/fs_filters/: gitignore.rs  mod.rs
tests/src/gitignore/: mod.rs
tests/src/mock/: buffer.rs  cursor.rs
tests/src/neovim/: buffer.rs  cursor.rs  events.rs  mod.rs  selection.rs
tests/src/utils/: convert.rs  distributions.rs  fuzz.rs  mod.rs
tests/src/walkdir/: gitignore.rs
xtask/: Cargo.toml  build.rs
xtask/src/: build.rs  lib.rs  main.rs
xtask/src/neovim/: build.rs  mod.rs  print_crate_infos.rs
(+566 files in other folders)
