[workspace]
members = ["benches", "crates/*", "crates/*/macros", "xtask"]
exclude = ["crates/collab-old"]

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
authors = ["Nomad <hello@nomad.foo>"]
license = "MIT"
publish = false

[workspace.dependencies]
# Third-party dependencies.
abs-path = { git = "ssh://git@github.com/nomad/abs-path.git" }
async-net = "2"
cauchy = { git = "ssh://git@github.com/nomad/cauchy.git" }
compact_str = "0.9"
derive_more = { version = "2", features = ["display"] }
flume = { version = "0.11", features = ["async"] }
futures-executor = { version = "0.3" }
futures-lite = { version = "2", default-features = false }
futures-util = { version = "0.3", default-features = false }
fxhash = "0.2"
indexmap = "2"
nohash = "0.2"
pin-project-lite = "0.2"
serde = "1"
slotmap = "1"
smallvec = "1"
smol_str = "0.3"
strsim = "0.11"
tracing = "0.1"

# Internal dependencies.
auth = { path = "./crates/auth" }
clipboard = { path = "./crates/clipboard" }
collab = { path = "./crates/collab" }
ed = { path = "./crates/ed" }
mock = { path = "./crates/mock" }
neovim = { path = "./crates/neovim" }
nomad = { path = "./crates/nomad" }
root-finder = { path = "./crates/root-finder" }
tempdir = { path = "./crates/tempdir" }
version = { path = "./crates/version" }
walkdir = { path = "./crates/walkdir" }

[workspace.lints.clippy]
bool_to_int_with_if = "deny"
cognitive_complexity = "deny"
module_inception = "allow"
# multiple_crate_versions = "deny" TODO: re-enable
needless_collect = "deny"
same_name_method = "deny"
too_many_arguments = "deny"
too_many_lines = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
missing_docs = "deny"
nonstandard_style = { level = "deny", priority = -1 }
refining_impl_trait = { level = "allow", priority = -1 }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"

[package]
name = "mad"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
neovim-nightly = ["neovim/nightly"]

[dependencies]
auth = { workspace = true, features = ["neovim"] }
collab = { workspace = true, features = ["neovim"] }
ed = { workspace = true }
neovim = { workspace = true }
version = { workspace = true }
