[workspace]
members = ["benches", "crates/*", "crates/*/macros", "tests", "xtask"]
resolver = "3"

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
authors = ["Nomad <hello@nomad.foo>"]
license = "MIT"
publish = false

[workspace.dependencies]
# Third-party dependencies.
abs-path = { git = "ssh://git@github.com/nomad/abs-path.git" }
anyhow = "1.0"
async-broadcast = "0.7"
async-fs = "2"
async-io = "2"
async-net = "2"
async-task = "4"
axum-core = "0.5"
base64 = "0.22"
bincode = "2"
cargo_metadata = "0.22"
cauchy = { git = "ssh://git@github.com/nomad/cauchy.git" }
chrono = { version = "0.4", default-features = false }
clap = "4"
collab-server = { git = "ssh://git@github.com/nomad/collab-server.git", default-features = false }
collab-types = { git = "ssh://git@github.com/nomad/collab-server.git" }
compact_str = "0.9"
concurrent-queue = "2.5"
copypasta = "0.10"
criterion = "0.7"
derive_more = { version = "2", features = ["display"] }
duplex-stream = { git = "ssh://git@github.com/nomad/collab-server.git" }
either = "1"
event-listener = "5"
fastrand = "2"
flume = { version = "0.11", features = ["async"] }
futures-executor = { version = "0.3" }
futures-lite = { version = "2", default-features = false }
futures-rustls = "0.26"
futures-util = { version = "0.3", default-features = false }
fxhash = "0.2"
git2 = { version = "0.20", default-features = false }
home = "0.5"
http = "1.3"
indexmap = "2"
keyring = { git = "https://git@github.com/open-source-cooperative/keyring-rs.git", branch = "v4", default-features = false }
nohash = "0.2"
notify = "8"
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi" }
open = "5"
pin-project-lite = "0.2"
rand = "0.9"
rand_chacha = "0.9"
reqwest = { version = "0.12", default-features = false }
rustls-pki-types = "1"
rustls-platform-verifier = "0.6"
send-future = "0.1"
serde = "1"
serde_json = "1"
serde_path_to_error = "0.1"
slotmap = "1"
smallvec = "1"
smol_str = "0.3"
strsim = "0.11"
tempfile = "3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
ulid = "1"
ureq = "3"
url = "2.5"

# Internal dependencies.
auth = { path = "./crates/auth" }
auth-types = { path = "./crates/auth-types" }
clipboard = { path = "./crates/clipboard" }
collab = { path = "./crates/collab" }
collab-project = { path = "./crates/collab-project" }
editor = { path = "./crates/editor" }
executor = { path = "./crates/executor" }
fs = { path = "./crates/fs" }
gitignore = { path = "./crates/gitignore" }
http-client = { path = "./crates/http-client" }
mock = { path = "./crates/mock" }
neovim = { path = "./crates/neovim" }
nomad = { path = "./crates/nomad" }
nomad-collab-params = { path = "./crates/nomad-collab-params" }
real-fs = { path = "./crates/real-fs" }
root-finder = { path = "./crates/root-finder" }
thread-pool = { path = "./crates/thread-pool" }
tracing-layers = { path = "./crates/tracing-layers" }
version = { path = "./crates/version" }

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
bool_to_int_with_if = "deny"
cognitive_complexity = "deny"
let_underscore_future = "allow"
module_inception = "allow"
multiple_crate_versions = "deny"
needless_collect = "deny"
same_name_method = "deny"
std_instead_of_core = "warn"
too_many_arguments = "deny"
too_many_lines = "deny"
trivially_copy_pass_by_ref = "warn"
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"
use_self = "warn"
wildcard_dependencies = "deny"
wildcard_imports = "warn"

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
missing_docs = "deny"
nonstandard_style = { level = "deny", priority = -1 }
refining_impl_trait = { level = "allow", priority = -1 }
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
