[package]
name = "benches"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
collab = ["dep:collab", "dep:walkdir"]

[dependencies]
abs-path = { workspace = true }
criterion = "0.6"
ed = { workspace = true, features = ["os-fs"] }
futures-lite = { workspace = true }
mock = { workspace = true }
thread-pool = { workspace = true }

# Collab-related dependencies.
collab = { workspace = true, optional = true, features = ["benches", "mock"] }
walkdir = { workspace = true, optional = true, features = ["gitignore"] }

[build-dependencies]
abs-path = { workspace = true, features = ["macros"] }
anyhow = "1.0"

[lints]
workspace = true

[[bench]]
name = "benches"
harness = false
