[package]
name = "benches"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
collab = ["dep:collab", "dep:gitignore", "dep:real-fs"]

[dependencies]
abs-path = { workspace = true }
criterion = { workspace = true }
ed = { workspace = true }
fs = { workspace = true }
futures-lite = { workspace = true }
mock = { workspace = true }
thread-pool = { workspace = true }

# Collab-related dependencies.
collab = { workspace = true, optional = true, features = ["benches", "mock"] }
gitignore = { workspace = true, optional = true }
real-fs = { workspace = true, optional = true }

[build-dependencies]
abs-path = { workspace = true, features = ["macros"] }
anyhow = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "benches"
harness = false
