[package]
name = "tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
# Needed to run Neovim tests.
crate-type = ["cdylib"]

[features]
# Features that enable a specific set of tests.
auth = ["dep:auth"]
collab = ["dep:auth", "dep:collab"]
gitignore = ["dep:tempdir", "dep:thread-pool", "fs-filters/gitignore"]
mock = []
neovim = ["dep:neovim", "auth?/neovim", "collab?/neovim"]
thread-pool = ["dep:thread-pool"]

# Other features.
neovim-nightly = ["neovim", "neovim/nightly"]

[dependencies]
abs-path = { workspace = true, features = ["macros"] }
async-io = { workspace = true }
cauchy = { workspace = true }
ed = { workspace = true }
flume = { workspace = true }
fs = { workspace = true }
fs-filters = { workspace = true }
futures-lite = { workspace = true, features = ["default"] }
futures-util = { workspace = true, features = ["default"] }
mock = { workspace = true }
pin-project-lite = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
tracing-subscriber = { workspace = true }

auth = { workspace = true, optional = true, features = ["mock"] }
collab = { workspace = true, optional = true, features = ["mock"] }
neovim = { workspace = true, optional = true, features = ["test"] }
tempdir = { workspace = true, optional = true }
thread-pool = { workspace = true, optional = true }

[build-dependencies]
neovim = { workspace = true, features = ["test"] }

[lints]
workspace = true
