[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.18"
clap = { version = "4", features = ["derive"] }
futures-executor = "0.3"
nvimx = { workspace = true }
root-finder = { workspace = true }
xshell = "0.2"

[lints]
workspace = true
