[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
abs-path = { workspace = true, features = ["macros"] }
anyhow = "1.0"
cargo_metadata = "0.20"
clap = { version = "4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
xshell = "0.2"

[lints]
workspace = true
