[package]
name = "auth-types"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
tests = []

[dependencies]
base64 = { workspace = true }
cauchy = { workspace = true }
derive_more = { workspace = true }
jsonwebtoken = { workspace = true }
peer-handle = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smol_str = { workspace = true, features = ["serde"] }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }

[lints]
workspace = true
