[package]
name = "auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
mock = ["auth-types/mock"]
neovim = ["keyring/apple-native", "keyring/secret-service", "dep:neovim"]

[dependencies]
abs-path = { workspace = true }
auth-types = { workspace = true, features = ["serde"] }
cauchy = { workspace = true }
derive_more = { workspace = true }
editor = { workspace = true }
event-listener = { workspace = true }
keyring = { workspace = true }
serde_json = { workspace = true }

neovim = { workspace = true, optional = true }

[lints]
workspace = true
