[package]
name = "auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
mock = []
github = ["nomad-collab-params/github-authenticator", "dep:nomad-collab-params"]
neovim = [
  "github",
  "keyring/apple-native",
  "keyring/secret-service",
  "dep:neovim",
]

[dependencies]
abs-path = { workspace = true }
auth-types = { workspace = true, features = ["serde"] }
cauchy = { workspace = true }
collab-types = { workspace = true }
derive_more = { workspace = true }
editor = { workspace = true }
event-listener = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-client = { workspace = true }
keyring = { workspace = true }
open = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }

neovim = { workspace = true, optional = true }
nomad-collab-params = { workspace = true, optional = true }

[lints]
workspace = true
