[package]
name = "collab-project"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
serde = [
  "collab-types/serde",
  "smallvec/serde",
  "smol_str/serde",
  "dep:bincode",
  "dep:serde",
]

[dependencies]
cauchy = { workspace = true }
collab-types = { workspace = true, features = ["bincode"] }
derive_more = { workspace = true }
fxhash = { workspace = true }
nohash = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }

bincode = { version = "2", optional = true, features = ["serde"] }
serde = { workspace = true, optional = true, features = ["derive"] }

[lints]
workspace = true
