[package]
name = "collab-project"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
mock = ["dep:fs", "dep:futures-lite", "dep:mock"]
serde = [
  "collab-types/bincode",
  "collab-types/serde",
  "smallvec/serde",
  "smol_str/serde",
  "dep:bincode",
  "dep:serde",
]

[dependencies]
cauchy = { workspace = true }
collab-types = { workspace = true }
derive_more = { workspace = true }
fxhash = { workspace = true }
nohash = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }

bincode = { workspace = true, optional = true, features = ["serde"] }
fs = { workspace = true, optional = true }
futures-lite = { workspace = true, optional = true }
mock = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }

[lints]
workspace = true
