[package]
name = "collab"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
mock = ["collab-server/server", "collab-server/test", "dep:duplex-stream"]
neovim = [
  "tls",
  "dep:async-io",
  "dep:async-net",
  "dep:clipboard",
  "dep:gitignore",
  "dep:home",
  "dep:neovim",
  "dep:nomad-collab-params",
]
tls = ["dep:futures-rustls", "dep:rustls-platform-verifier"]

[dependencies]
abs-path = { workspace = true, features = ["macros"] }
auth = { workspace = true }
cauchy = { workspace = true }
collab-project = { workspace = true, features = ["serde"] }
collab-server = { workspace = true, features = ["client"] }
collab-types = { workspace = true }
compact_str = { workspace = true }
derive_more = { workspace = true }
editor = { workspace = true }
either = { workspace = true }
executor = { workspace = true }
fastrand = { workspace = true }
flume = { workspace = true, features = ["async"] }
fs = { workspace = true, features = ["filter"] }
futures-util = { workspace = true }
fxhash = { workspace = true }
indexmap = { workspace = true }
rand = { workspace = true }
rustls-pki-types = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true, features = ["const_new"] }
tracing = { workspace = true }

# Mock-only dependencies.
duplex-stream = { workspace = true, optional = true }

# Neovim-only dependencies.
async-io = { workspace = true, optional = true }
async-net = { workspace = true, optional = true }
clipboard = { workspace = true, optional = true }
gitignore = { workspace = true, optional = true }
home = { workspace = true, optional = true }
neovim = { workspace = true, optional = true }
nomad-collab-params = { workspace = true, optional = true }

# TLS-only dependencies.
futures-rustls = { workspace = true, optional = true }
rustls-platform-verifier = { workspace = true, optional = true }

[lints]
workspace = true
