[package]
name = "collab2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
neovim = [
  "dep:async-net",
  "dep:clipboard",
  "dep:home",
  "dep:pin-project-lite",
  "futures-util/async-await-macro",
  "nvimx2/neovim-0-10",
  "nvimx2/neovim-mlua",
]
test = ["auth/test", "nvimx2/tests"]

[dependencies]
auth = { workspace = true }
collab-server = { git = "ssh://git@github.com/nomad/collab.git", default-features = false, features = ["client", "nomad"] }
concurrent-queue = "2.5"
derive_more = { workspace = true }
eerie = { workspace = true }
flume = { workspace = true, features = ["async"] }
futures-util = { workspace = true }
fxhash = { workspace = true }
nvimx2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true }
smol_str = { workspace = true }
walkdir = { workspace = true }

# Neovim-only dependencies.
async-net = { workspace = true, optional = true }
clipboard = { workspace = true, optional = true }
home = { version = "0.5", optional = true }
pin-project-lite = { workspace = true, optional = true }

[dev-dependencies]
nvimx2 = { workspace = true, features = ["tests"] }

[lints]
workspace = true

[[test]]
name = "start"
required-features = ["test"]
