[package]
name = "colorschemes"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
fuzzy-modal = { path = "../fuzzy-modal" }
hex = { path = "hex" }

once_cell = { workspace = true }
phf = { workspace = true, features = ["macros"] }
serde = { workspace = true }
