[package]
name = "ed"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
async-task = ["dep:async-task"]

[dependencies]
abs-path = { workspace = true, features = ["serde"] }
cauchy = { workspace = true }
compact_str = { workspace = true }
derive_more = { workspace = true }
flume = { workspace = true, features = ["async"] }
fs = { workspace = true }
futures-lite = { workspace = true, features = ["std"] }
futures-util = { workspace = true, features = ["alloc", "async-await-macro"] }
fxhash = { workspace = true }
pin-project-lite = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }
strsim = { workspace = true }

async-task = { workspace = true, optional = true }

[lints]
workspace = true
