[package]
name = "executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
async-task = ["dep:async-task"]

[dependencies]
pin-project-lite = { workspace = true }

async-task = { workspace = true, optional = true }

[lints]
workspace = true
