[package]
name = "mock"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
abs-path = { workspace = true, features = ["macros"] }
async-broadcast = { workspace = true }
async-task = { workspace = true }
anyhow = { workspace = true }
cauchy = { workspace = true }
derive_more = { workspace = true }
editor = { workspace = true }
executor = { workspace = true, features = ["async-task"] }
flume = { workspace = true, features = ["async"] }
fs = { workspace = true }
futures-lite = { workspace = true, features = ["std"] }
fxhash = { workspace = true }
indexmap = { workspace = true }
mock-macros = { path = "./macros" }
pin-project-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slotmap = { workspace = true }

[dev-dependencies]
async-io = { workspace = true }

[lints]
workspace = true
